build: updated surefire configuration so that kit module exposes the com.oracle.javafx.scenebuilder.kit.skeleton to ALL-UNNAMED to enable testing.