@@ -145,6 +145,7 @@
                         <argLine>
                             --add-opens=javafx.fxml/javafx.fxml=com.gluonhq.scenebuilder.kit -Djavafx.allowjs=true --enable-native-access=javafx.graphics
                             --add-opens com.gluonhq.scenebuilder.kit/com.oracle.javafx.scenebuilder.kit.metadata.util=ALL-UNNAMED
+                            --add-opens com.gluonhq.scenebuilder.kit/com.oracle.javafx.scenebuilder.kit.skeleton=ALL-UNNAMED
                         </argLine>
                     </configuration>
                 </plugin>
